cli/tests/golden/negative/type_mismatch.lrl
(inductive copy Nat Type
  (zero Nat)
  (succ (pi n Nat Nat)))

(def bad Nat
  (lam x Nat x))
